<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.johsta.lantigerwlanapp2.MainActivity" >
    <ScrollView
        android:id="@+id/container_scroll_view_main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            style="?android:buttonBarStyle">

            <Button
                android:id="@+id/button_gpio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gpio"
                android:drawableLeft="@drawable/led"
                android:drawableStart="@drawable/led"
                android:gravity="start|center_vertical"
                style="?android:buttonBarButtonStyle"/>
            <!--             style="@style/CustomButtonStyle"  -->


            <Button
                android:id="@+id/button_adc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/adc"
                android:drawableLeft="@drawable/adc"
                android:drawableStart="@drawable/adc"
                android:gravity="start|center_vertical"
                style="?android:buttonBarButtonStyle"/>

            <Button
                android:id="@+id/button_sendImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sendButton"
                android:drawableLeft="@drawable/kamera"
                android:drawableStart="@drawable/kamera"
                android:gravity="start|center_vertical"
                style="?android:buttonBarButtonStyle"/>

            <Button
                android:id="@+id/button_esp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ESP"
                android:drawableLeft="@drawable/led"
                android:drawableStart="@drawable/led"
                android:gravity="start|center_vertical"
                style="?android:buttonBarButtonStyle"/>
        </LinearLayout>
    </ScrollView>

       <ImageView
              android:id="@+id/hsMaLogo"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:src="@drawable/hsmannheimlogo"
              android:contentDescription="@string/hsMannheimLogo"/>

</LinearLayout>